tests/ui/cached_cache_err_requires_result_return.rs
use cached::macros::cached;

#[cached(cache_err = true)]
fn my_fn(k: i32) -> i32 {
    k
}

fn main() {}
